tests/errors/runtime.DivisionByZero.res
0
1
2
>> Runtime | File: runtime.DivisionByZero.art
     error | Line: 4
           | 
           | division by zero